<resources>
    <string name="app_name">MarketUtec</string>
    <string name="home">Home</string>
    <string name="catbar">Categoria</string>
    <string name="userbar">Usuario</string>
    <string name="mensajesbar">Mensajes</string>
    <string name="buscarbar">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nombre_barra">Market Utec</string>
    <string name="login_carnet_hint">Carnet</string>
    <string name="login_password">Password</string>
    <string name="encabezado_registro">Registro</string>
    <string name="nombre_registro">Nombre</string>
    <string name="apellido_registro">Apellido</string>
    <string name="carnet_registro_hint">Carnet</string>
    <string name="mail_registro_hint">Mail</string>
    <string name="telefono_registro_hint">Telefono</string>
    <string name="password_registro_hint">Password</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_registro_volver">Ya estas registrado? Ingresa.</string>
    <string name="btnAgregar">Agregar</string>
    <string name="image_default__image">Imagen por defecto</string>


    <string name="item_entry_detail__item_name">Nombre del árticulo</string>
    <string name="item_entry_detail__category_name">Categoría</string>
    <string name="item_entry_detail__subcategory_name">Subcategoría</string>
    <string name="item_entry_detail__discount_name">Tipo de descuento</string>
    <string name="item_entry_detail__search_name">Buscar etiquetas / palabras clave</string>
    <string name="item_entry_detail__description">Descripción</string>
    <string name="item_entry_detail__is_published">Esta publicado</string>
    <string name="item_entry_detail__item_images">Imágenes del artículo</string>
    <string name="item_entry_detail__view_all">Ver todos></string>
    <string name="item_entry_detail__btn_attributes">ATRIBUTOS</string>
    <string name="item_entry_detail__btn_upload_image">CARGAR IMAGEN</string>
    <string name="item_entry_detail__btn_save">SALVAR</string>
    <string name="item_entry_detail__btn_filter">BUSCAR</string>
    <string name="item_entry_detail__price">Precio</string>
    <string name="item_entry_detail__title">¿Qué estás publicando hoy?</string>
    <string name="item_entry_detail__desc">Elija algunas fotos para mostrar su articulo.</string>
    <string name="item_entry_detail__remark">Observación</string>
    <string name="item_entry_detail__shop_setting">Ajuste de la tienda</string>
    <string name="item_entry_detail__is_shop">Vendera mas de 1 unidad?</string>
    <string name="item_entry_detail__is_shop_desc">(Se le indicara al comprador si puede ordenar mas de 1 unidad)</string>
    <string name="item_entry_detail__highlight">Información destacada</string>
    <string name="item_entry_detail__latitude">Latitud</string>
    <string name="item_entry_detail__longitude">Longitud</string>
    <string name="item_entry_detail__location">Ubicación</string>
    <string name="item_entry_detail__address">Dirección</string>
    <string name="item_entry_detail__submit">Enviar</string>
    <string name="item_entry_detail__brand">Marca (Opcional)</string>
    <string name="item_entry_star">*</string>
    <string name="sf__ByItemType">Título del anuncio</string>
    <string name="menu__category">Categoría</string>
    <string name="search__notSet">No establecido</string>
    <string name="menu__subcategory">Subcategoría</string>
    <string name="sf__type">Tipo</string>
    <string name="sf__notSet">No establecido</string>
    <string name="sf__item_conditio">Condición del artículo</string>
    <string name="sf__price_type">Tipo de precio</string>
    <string name="sf__deal_option">Opción de entrega</string>
    <string name="item_entry_pin_shop">ubicación de tienda o lugar de reunion</string>
    <string name="titulopub">Titulo</string>
    <string name="precioart">Precio</string>
    <string name="carreraart">Carrera</string>
    <string name="descripcionarticulo">Descripcion</string>
    <string name="btnpublicar_articulo">Publicar Articulo</string>
    <string name="spinnersubcategoria">SubCategoria</string>
    <string name="spinner_estado">Estado</string>
    <string name="item_detail__statistic">Estadística</string>
    <string name="item_detail__meet_seller">conoce al vendedor</string>
    <string name="profile__verified">Verificado</string>
    <string name="item_detail__chat">Whatsapp</string>
    <string name="item_detail__call">Llamada</string>
    <string name="item_detail__delete">Borrar</string>
    <string name="item_detail__edit">editar</string>


</resources>
