<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/registrobg"
    tools:context=".Fragments.Registro"
    >

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="47dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/encabezado_registro"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="________________________________"
                android:textStyle="bold|italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="28dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:hint="@string/nombre_registro"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:hint="@string/apellido_registro"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCarnet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:hint="@string/carnet_registro_hint"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:hint="@string/mail_registro_hint"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Space
                android:layout_width="match_parent"
                android:layout_height="11dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:hint="@string/telefono_registro_hint"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:ems="10"
                    android:hint="@string/password_registro_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Spinner
                android:id="@+id/spinnerCarreras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/Rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/btn_registrarse" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <TextView
                android:id="@+id/txtbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_registro_volver" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="207dp" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>