<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AddArticulo">

    <!-- TODO: Update blank fragment layout -->


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/md_grey_200">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/item_entry_detail__title"
                android:textAlignment="viewStart"
                android:textColor="@color/text__primary"
                android:textSize="@dimen/font_title_size"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="66dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/descTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/item_entry_detail__desc"
                android:textAlignment="viewStart"
                android:textColor="@color/text__primary"
                android:textSize="@dimen/font_title_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>

            <HorizontalScrollView
                android:id="@+id/imageNestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descTitleTextView"
                tools:layout_editor_absoluteX="56dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/firstImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/image_default__image"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/default_image" />

                    <ImageView
                        android:id="@+id/secImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image_default__image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/firstImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/default_image" />

                    <ImageView
                        android:id="@+id/thirdImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginBottom="8dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image_default__image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/secImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/default_image" />

                    <ImageView
                        android:id="@+id/fouthImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image_default__image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/thirdImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/default_image" />

                    <ImageView
                        android:id="@+id/fifthImageView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image_default__image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fouthImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/default_image" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="viewStart"
                android:text="@string/titulopub" />

            <EditText
                android:id="@+id/etxtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@drawable/custom_progress_bar_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/space_12"
                android:paddingLeft="@dimen/space_12"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/space_12"
                android:paddingRight="@dimen/space_12"
                android:paddingBottom="8dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtCarrera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="viewStart"
                android:text="@string/carreraart" />

            <Spinner
                android:id="@+id/carreraspinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/space_12"
                android:paddingLeft="@dimen/space_12"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/space_12"
                android:paddingRight="@dimen/space_12"
                android:paddingBottom="8dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtSubC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="viewStart"
                android:text="@string/spinnersubcategoria" />

            <Spinner
                android:id="@+id/SubCSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/space_12"
                android:paddingLeft="@dimen/space_12"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/space_12"
                android:paddingRight="@dimen/space_12"
                android:paddingBottom="8dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="viewStart"
                android:text="@string/spinner_estado" />

            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/space_12"
                android:paddingLeft="@dimen/space_12"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/space_12"
                android:paddingRight="@dimen/space_12"
                android:paddingBottom="8dp"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/txtPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="viewStart"
                android:text="@string/precioart" />


            <EditText
                android:id="@+id/etxtPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:background="@drawable/custom_progress_bar_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/space_12"
                android:paddingLeft="@dimen/space_12"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/space_12"
                android:paddingRight="@dimen/space_12"
                android:paddingBottom="8dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="viewStart"
                android:text="@string/descripcionarticulo" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_progress_bar_horizontal"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/space_12"
                android:paddingLeft="@dimen/space_12"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/space_12"
                android:paddingRight="@dimen/space_12"
                android:paddingBottom="8dp"
                android:textSize="14sp"
                android:singleLine="false"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="34dp" />

            <Button
                android:id="@+id/btnPublicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:text="@string/btnpublicar_articulo"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/space_12"
                android:paddingLeft="@dimen/space_12"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/space_12"
                android:paddingRight="@dimen/space_12"
                android:paddingBottom="8dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="114dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>